<resources>
    <string name="app_name">Gallery</string>
    <string name="new_event">New event</string>
    <string name="event_title_hint">enter title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_event">Delete event</string>
    <string name="send_event">send</string>
    <string name="event_subject">event</string>
    <string name="send_report">event report</string>
    <string name="event_description">Description:</string>
    <string name="get_location_button">Get location</string>
    <string name="event_title">Title</string>
    <string name="add_event">add event</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_map">open map</string>
    <string name="gps_not_enabled">GPS not enabled</string>
    <string name="update_event">Edit event</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_new_title">new title</string>
    <string name="edit_description">description</string>
    <string name="edit_title_hint">edit title</string>
    <string name="apply_changes_button">Confirm</string>
    <string name="edit_title_label">Title:</string>
    <string name="edit_description_label">description:</string>
</resources>
