<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/edit_event_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_title_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_hint"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_description_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/apply_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes_button"
        android:layout_gravity="right"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>