<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/new_event_creator_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="16dp"
        />

    <EditText android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_hint"
        />


    <EditText android:id="@+id/add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        />

    <Button android:id="@+id/get_location_button"
        android:text="@string/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>