<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/new_event_creator_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/image_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#7000"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title_hint" />


        <EditText
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description" />

        <Button
            android:id="@+id/get_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_location_button" />

    </LinearLayout>

</ScrollView>

